Android: handle image from assets

Task-number: QTBUG-46866
Change-Id: I0f7f8bcb3afe528e9a00270025ed42e950221800
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>